--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -9,18 +9,65 @@ html {
     height: 100%;
 }
 body {
+    overflow-y: hidden;
+
     margin: 0;
     padding: 0;
     height: 100vh;
-    background-color: #ecf0f1;
+
+    color: #2c3e50;
+    
+    background-color: #ffffff;
+    background-image: url("../images/back.jpg");
+    background-attachment: fixed;
+    background-size: cover;
+    background-position: center;
 }
 *, *::before, *::after {
     box-sizing: border-box;
 }
 
-.disabled {
-    &:hover {
-        cursor: not-allowed;
+.loading {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: #686de0;
+    z-index: 1000;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.blur-overlay {
+    display: block;
+    position: fixed;
+    visibility: hidden;
+    opacity: 0;
+    z-index: -3;
+
+    background-color: rgba(0,0,0,0.7);
+    width: 100%;
+    height: 100%;
+}
+
+.hamburger-nav {
+    z-index: 10;
+    position: fixed;
+    left:0;
+    top:0;
+    overflow-x: hidden;
+
+    width: 0px;
+    height: 100%;
+    background-color: white;
+    box-shadow: 2px 2px 6px rgb(43, 43, 43);
+
+    .close {
+        padding: 20px;
+    }
+    .menu-hamburger {
+        padding: 50px 0px 0px 0px;
     }
 }
 
@@ -35,10 +82,49 @@ body {
         width: fit-content;
         padding: 40px;
     }
+    
+    .login-box {
+        cursor: pointer;
+        position: fixed;
+        padding: 40px;
+
+        display: flex;
+        align-items: flex-start;;
+        justify-content: center;
+
+        visibility: hidden;
+        opacity: 0;
+        z-index: -4;
+        .login-innerbox {
+            padding: 20px;
+            background-color: white;
+            min-width: 240px;
+            max-width: 250px;
+            height: fit-content;
+            box-shadow: 2px 2px 4px solid black;
+            border-radius: 5px;
+
+        }
+        .login-arrow {
+            background-color: white;
+            z-index: -4;
+            width: 100px;
+            height: 100px;
+
+            position: absolute;
+            transform: rotate(45deg);
+        }
+    }
+    
 }
 
 .header {
-    background-color: #ecf0f1;
+    background: none;
+    h1 {
+        color: #4834d4;
+        font-weight: 900;
+        letter-spacing: 10px;
+    }
 
     .menu-conta {
         display: flex;
@@ -61,11 +147,11 @@ body {
 
     position: sticky;
     top:0;
-    z-index: 100;
-    background-color: #e74c3c;
+    z-index: 3;
+    background-color: #4834d4;
     padding: 15px;
     .container {
-        .col-md-4 {
+        .nav-section {
             display: flex;
             align-items: center;
             justify-content: center;
@@ -82,54 +168,137 @@ body {
                         border-radius: 5px;
                         transition: 200ms;
                         &:hover {
-                            background-color: #c0392b;
+                            background-color: #30336b;
                         }
                     }
                 }
             }
         }
-        .carrinho img {
-            padding: 5px;
-            border-radius: 5px;
-            transition: 200ms;
-            &:hover {
-                background-color: #c0392b;
+        .nav-left {
+            .hamburger-btn {
+                cursor: pointer;
             }
         }
-        .favorito img {
-            padding: 5px;
-            border-radius: 5px;
-            transition: 200ms;
-            &:hover {
-                background-color: #c0392b;
+        .nav-center {
+        }
+        .search-form {
+            background-color: white !important;
+        }
+        .nav-right {
+            width: 100%;
+            display: flex;
+            justify-content: flex-end;
+        }
+        .nav-icon {
+            img {
+                padding: 5px;
+                border-radius: 5px;
+                transition: 200ms;
+                &:hover {
+                    background-color: #30336b;
+                }
             }
         }
     }
-    
+}
+
+.sub-banner {
+    padding: 20px;
+
+    .subbanner-img {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        img {
+            max-height: 300px;
+        }
+    }
+    .subbanner-text {
+        padding-top: 20px;
+        h1, h3 {
+            font-weight: 900;
+        }
+        .ofertas-text {
+            color: #4834d4 !important;
+        }
+    }
 }
 
 .content {
     padding-top: 50px;
     padding-bottom: 260px; //height of the footer
+
     .products {
         margin-top: 40px;
-        background-color: #ecf0f1;
+        background: none;
         .product {
+            position: relative;
             background-color: white;
-            max-width: 300px;
-            min-width: 180px;
+            max-width: 240px;
+            min-width: 220px;
             margin: 10px;
+            box-shadow: 1px 1px 6px black;
+            transition: 0.3s;
+
+            &:hover {
+                box-shadow: 6px 6px 12px black;
+                .carrinho-product, .favoritos-product {
+                    background-color: #badc58;
+                    border: #6ab04c;
+                }
+                .added {
+                    cursor: not-allowed;
+                    background-color: #ff7979;
+                    &:hover {
+                        background-color: #ff7979 !important;
+                    }
+                }
+            }
+
+            @media screen and (max-width: $small){
+                min-width: 290px;
+            }
+
+            .img-product {
+                padding-top: 30px;
+            }
+
+            .product-icons {
+                z-index: 1;
+                position: absolute;
+                top:-5px;
+                left:-10px;
+                padding: 5px;
+
+                .carrinho-product {
+                    transition: 500ms;
+                    &:hover {
+                        background-color: #6ab04c;
+                    }
+                }
+                .favoritos-product {
+                    transition: 500ms;
+                    &:hover {
+                        background-color: #6ab04c;
+                    }
+                }
+            }
+
             .percentage-off {
                 width: fit-content;
                 position: absolute;
                 top:-5px;
                 right:-5px;
                 padding: 5px;
-                background-color: red;
+                background-color: #eb4d4b;
                 color: white;
+                transition: 0.3s;
             }
             .card-body {
                 position: relative;
+                .card-title {
+                    color: #4834d4;
+                }
                 .price-tag {
                     position: absolute;
                     bottom: 0;
@@ -140,29 +309,32 @@ body {
         }
     }
     .product-details {
-        background-color: white;
+        background: none;
         border-radius: 5px;
         padding: 20px;
-
+        .product-card {
+            h1 {
+                color: #4834d4 !important;
+            }
+            
+        }
         .description {
             padding: 5px;
             margin-left: 15px;
             color: white;
             background-color: #2c3e50;
         }
+        .favorito-btn {
+            padding: 20px;
+        }  
+        .carrinho-btn {
+            padding: 20px;
+        }
     }
-    .perfil-block {
-        background-color: white;
-        padding: 60px;
-        border-radius: 5px;
-    }
-    .carrinho-block {
-        background-color: white;
-        padding: 60px;
-        border-radius: 5px;
-
-        @media screen and (max-width:$medium){
-            padding: 5px;
+    .table-carrinho {
+        @media screen and (max-width: $medium){
+            font-size: small;
+            max-width: 260px;
         }
     }
     .finalizar {
@@ -177,6 +349,14 @@ body {
         background-color: white;
         border-radius: 5px;
     }
+
+    .auth-form {
+        border-top: 6px solid #4834d4 !important;
+        padding: 20px;
+        h3 {
+            color: #4834d4;
+        }
+    }
 }
 
 footer {
@@ -185,11 +365,64 @@ footer {
     left: 0;
     height: 200px; //height of the footer
     width: 100%;
-    background-color: #e74c3c;
+    background-color: #4834d4;
     display: flex;
     align-items: center;
     justify-content: center;
 
     color: white;
     padding: 40px;
+}
+
+.disabled {
+    &:hover {
+        cursor: not-allowed;
+    }
+}
+
+// BOOTSTRAP OVERWRITES
+
+.btn-success {
+    background-color: #6ab04c;
+    border: solid #6ab04c;
+    &:hover {
+        background-color: #badc58;
+        border: solid #badc58;
+    }
+}
+.btn-danger {
+    background-color: #eb4d4b;
+    border: solid #eb4d4b;
+    &:hover {
+        background-color: #ff7979;
+        border: solid #ff7979;
+    }
+}
+.btn-primary {
+    background-color: #4834d4;
+    border: solid #4834d4;
+    &:hover {
+        background-color: #686de0;
+        border: solid #686de0;
+    }
+}
+.btn-secondary {
+    background-color: #535c68;
+    border: solid #535c68;
+    &:hover {
+        background-color: #95afc0;
+        border: solid #95afc0;
+    }
+}
+.btn-light {
+    background-color: #dff9fb;
+    border: #dff9fb;
+    &:hover {
+        background-color: #f2fcfd;
+        border: #f2fcfd;
+    }
+}
+input:not(.btn), input:focus:not(.btn) {
+    border: none;
+    background-color: #dee6ec;
 }
