--- a/views/admin/painel.pug
+++ b/views/admin/painel.pug
@@ -1,4 +1,4 @@
-extends layout
+extends ../layout
 
 block content
 	.container
@@ -10,7 +10,7 @@ block content
 					a(class="list-group-item list-group-item-action" id="list-messages-list" data-toggle="list" href="#list-messages" role="tab" aria-controls="messages") Adicionar Fabricante
 					a(class="list-group-item list-group-item-action" id="list-settings-list" data-toggle="list" href="#list-settings" role="tab" aria-controls="settings") Gerenciar Permissões
 			
-			div(class="col-8")
+			div(class="col-8 bg-white border shadow-sm rounded")
 				div(class="tab-content" id="nav-tabContent")
 					div(class="tab-pane fade show active" id="list-home" role="tabpanel" aria-labelledby="list-home-list")
 						h3 Perfil de administrador:
